--- a/package.json
+++ b/package.json
@@ -7,12 +7,15 @@
     "compile:scss": "node-sass sass/main.scss css/style.css -w",
     "prefix:css": "postcss --use autoprefixer -b 'last 10 versions' css/style.css -o css/style.css",
     "compress:css": "node-sass css/style.css css/style.css --output-style compressed",
-    "build": "npm-run-all prefix:css compress:css"
+    "build": "npm-run-all prefix:css compress:css",
+    "lite": "lite-server --port 10001",
+    "start": "npm run lite"
   },
   "author": "",
   "license": "GPL-3.0",
   "devDependencies": {
     "autoprefixer": "^10.3.1",
+    "lite-server": "^1.3.1",
     "node-sass": "^6.0.1",
     "npm-run-all": "^4.1.5",
     "postcss-cli": "^8.3.1"
